--- a/config/config.env
+++ b/config/config.env
@@ -4,5 +4,6 @@ NODE_ENV = development
 MONGO_URI = mongodb+srv://6633149121:1234@rentalcarcluster.xoewe7o.mongodb.net/RentCar?retryWrites=true&w=majority&appName=RentalCarCluster
 
 JWT_SECRET = canbeanything
-JWT_EXPIRE = 30d
-JWT_COOKIE_EXPIRE = 30
+JWT_EXPIRE = 365d
+JWT_COOKIE_EXPIRE = 365
+HOST = http://localhost
